adding some assignmets

--- a/week05/assign05.html
+++ b/week05/assign05.html
@@ -1,11 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--<link rel="stylesheet" href="/week05/style/reset.css">-->
+    <link rel="stylesheet" href="/week05/style/main.css">
 </head>
+
 <body>
-    <h1>This will be assignment #5</h1>
+    <div>
+        <header id="header">
+            <div>
+                <h1>Overwatch: The Story So Far</h1>
+            </div>
+        </header>
+
+        <div id="content">
+            <h2>A Brief Background</h2>
+            <p>Overwatch is a team-based first person shooter published and developed by Blizzard Entertainment. The two
+                teams compete against each other to finish different kinds of objectives within a certain amount of time
+                whilst also fighting each other.</p>
+            <img style="max-width: 100%;" src="/week05/images/gamePlay.png" alt="game play">
+            <p>The game is often described as a “hero shooter” due to the fact that each player individually selects a
+                hero to play in every match, from a roster of 30 characters. All of which are divided into three
+                different categories that suit their playstyle (tank, damage and support). The game features a very
+                bright and cartoon-like theme, something that makes it unique compared to other shooters.</p>
+            <p>Overwatch was the winner of the awards for best game of 2016. Overwatch had around 40 million monthly
+                players.</p>
+            <h2>The Story</h2>
+            <div id="omnic-crisis">
+                <h3 style="text-align: center;">The Omnic Crisis</h3>
+                <p>Overwatch’s story begins with the Omnica Corporation, a massive tech company which began
+                    manufacturing robots known as Omnics to help aid society and the economy. They built a number of
+                    state-of-the-art manufacturing plants, called Omniums, in various locations around the world. One of
+                    their most popular models created was the “Bastion” unit, utilized as a “peacekeeper” and renowned
+                    for its unique ability to transform between its Recon, Sentry, and Tank modes. However, after
+                    multiple facilities ran into manufacturing problems and as the Omnica Corporation being investigated
+                    for fraud, the Omniums were forced to shut down.</p>
+                <p>Years later, multiple Omnium facilities mysteriously sprang back to life and began manufacturing
+                    Bastion units with the intention of destroying humanity. They amass an army and begin their global
+                    assault, starting with Russia. As a means to defend their country from the invading Omnics, Volskaya
+                    Industries developed the Svyatogor, a giant human-piloted mech.</p>
+                <img style="float: left;" src="/week05/images/omnicCrisis.png" alt="omnic Crisis">
+                <p>As other nations were similarly invaded and attacked by the Omnics, they were forced to respond in
+                    kind as well. The United States secretly began the Soldier Enhancement Program, which modified their
+                    existing soldiers into elite mercenaries. The two most notable test subjects were Jack Morrison and
+                    Gabriel Reyes, who will eventually become the Overwatch characters known as Soldier: 76 and Reaper,
+                    respectively.</p>
+                <p>Germany responded with the Crusaders, an elite force of soldiers known for their heavy suits of armor
+                    inspired by knights, and large weaponry such as hammers and maces. Their forces were led by
+                    Balderich von Adler and his apprentice, Reinhardt Willhelm. After a catastrophic battle in
+                    Eichenwalde, von Adler falls, handing over the reigns to young Reinhardt. Von Adler’s suit of armor
+                    can still be seen in the castle’s great hall.</p>
+                <img style="float: right;" src="/week05/images/omnicCrisis2.png" alt="omnic Crisis">
+                <p>Meanwhile on the Moon, the Horizon Lunar Colony is creating genetically modified animals as a means
+                    to test long-term habitation in space. One of these, a young ape named Winston, is born. Eventually,
+                    the apes began revolting against their captors, killing all of the scientists in the process.
+                    Putting his genius-level intellect to use, Winston creates a rocket to escape the Moon and head to
+                    Earth. A hamster named Hammond hitches a ride back, as well. The other lunar apes remained on the
+                    moon, because apparently they like it there.</p>
+            </div>
+            <div id="overwatch-rise">
+                <h3 style="text-align: center;">The Rise of Overwatch</h3>
+                <p>As Omnic forces continue dominating the world, the United Nations proposes the Overwatch Strike Team,
+                    initially made up of Jack Morrison, Gabriel Reyes, Ana Amari (a deadly sniper from Egypt), Reinhardt
+                    Wilhelm, Torbjörn Lindholm (a weapons Engineer from Sweden) and a still-unknown individual named
+                    Liao, with Reyes acting as the team’s first Strike Commander. Together, they finally began achieving
+                    success, pushing back Omnic forces for the first time thanks to their internationally united effort.
+                    After a few years, the Omnic Crisis is declared over.</p>
+                <p>As Omnic forces continue dominating the world, the United Nations proposes the Overwatch Strike Team,
+                    initially made up of Jack Morrison, Gabriel Reyes, Ana Amari (a deadly sniper from Egypt), Reinhardt
+                    Wilhelm, Torbjörn Lindholm (a weapons Engineer from Sweden) and a still-unknown individual named
+                    Liao, with Reyes acting as the team’s first Strike Commander. Together, they finally began achieving
+                    success, pushing back Omnic forces for the first time thanks to their internationally united effort.
+                    After a few years, the Omnic Crisis is declared over.</p>
+                <img style="max-width: 100%;" src="/week05/images/overwatchOrganization.png"
+                    alt="overwatch Organization">
+                <p>Gabriel Reyes joins a newly formed covert organization operating under the Overwatch banner called
+                    Blackwatch with other members, including Jesse McCree, Genji Shimada, and Moira O’Deorain. They are
+                    deployed to fight against Talon, a new-risen terrorist threat that appears interested in starting
+                    another Omnic Crisis.</p>
+                <p>Reyes, along with the other members of Blackwatch, head to Italy in a covert operation to kidnap one
+                    of Talon’s leaders, Antonio Bartalotti. Reyes, against his better judgment, ends up killing
+                    Bartalotti, ultimately exposing Blackwatch to the world.</p>
+                <p>Meanwhile, another terrorist organization known as Null Sector emerges in London, comprised of Omnics
+                    rebelling against society after facing persecution following the Omnic Crisis. They launch a
+                    surprise attack on King’s Row, taking hostages and killing hundreds of people in the process.
+                    Against the orders of the British Prime Minister, Morrison deploys Overwatch agents Tracer,
+                    Reinhardt, Torbjörn, and Mercy to stop the Null Sector forces, where they are ultimately successful.
+                </p>
+            </div>
+            <div id="overwatch-fall">
+                <h3 style="text-align: center;">The Fall of Overwatch</h3>
+                <p>Once the public became aware of Blackwatch’s extra-legal activities, an investigation is ordered by
+                    the United Nations. Morrison and Reyes find themselves at odds with one another, and their argument
+                    ends in an explosion at one of Overwatch’s headquarters where both men are presumed dead. Overwatch
+                    is disbanded, many of its former members return home, and any further action by Overwatch is
+                    considered an illegal act.</p>
+                <img style="float: right;" src="/week05/images/ovewatchFall.png"
+                    alt="ovewatch Fall">
+                <p>In the weeks after, several former Overwatch facilities are broken into by a mysterious individual
+                    who steals various weapons and equipment, including a prototype pulse rifle. The thief becomes a
+                    vigilante, taking down many of Overwatch’s former enemies single-handedly, and ultimately reveals
+                    himself to be Jack Morrison - who is somehow still alive - now operating under the name Soldier: 76.
+                </p>
+                <p>Reyes, meanwhile, also survived the explosion and, with the help of the genetic engineer Moira, is
+                    brought back from the brink of death. However, the procedure leaves him, quite literally, a shadow
+                    of his former self - able to temporarily render himself incorporeal. Really leaning into his new
+                    goth vibe, he joins the evil Talon organization in hopes to take down the former members of
+                    Overwatch and begins operating under the name Reaper.</p>
+            </div>
+            <div id="present-day">
+                <h3 style="text-align: center;">Present Day</h3>
+                <p>A second Omnic Crisis breaks out in Russia, and begins spreading across the world, which begins to
+                    fall into chaos. Reaper breaks into Overwatch’s Watchpoint facility in Gibraltar and attacks Winston
+                    while trying to obtain the list of all former Overwatch members, whom he plans to seek vengeance on
+                    because… he’s … jealous? We aren’t 100% sure, honestly - Reaper’s past is probably the biggest grey
+                    area in the OW canon.</p>
+                <p>With events coming to a head, Winston issues an emergency recall to Overwatch’s agents. Tracer
+                    immediately responds to his call, followed afterwards by Mercy, Genji, Torbjörn, Reinhardt, and
+                    McCree.</p>
+                    <img style="max-width: 100%;" src="/week05/images/ovewatch2.png"
+                    alt="ovewatch 2">
+                <p>Talon agents, led by Reaper and master sniper Amélie Lacroix (AKA Widowmaker) break into a museum
+                    attempting to steal a gauntlet belonging to one of their leaders, Akande Ogundimu - better known as
+                    Doomfist. Tracer and Winston foil the heist, but the footage is broadcast to the world, proving not
+                    only that heroes are back, but necessary during these troubling times.</p>
+                <p>hat brings us to present day, where Overwatch and Talon are at war with one another, while the
+                    ongoing Omnic Crisis takes place around the world. The first cinematic for Overwatch 2 reveals
+                    Winston and the gang taking down a giant Omnic in Paris, and confirming in the end that Overwatch is
+                    back.</p>
+            </div>
+
+            <h2>Main game characters:</h2>
+        </div>
+
+        <div class="main-char">
+            <div class="first-char">
+                <h1>Winston</h1>
+                <img id="winston" src="/week05/images/winston.png" alt="winston">
+                <p>A super-intelligent, genetically engineered gorilla, Winston is a brilliant scientist and a champion
+                    for
+                    humanity's potential.</p>
+
+                <p>The Horizon Lunar Colony was established as a first step for humanity's renewed exploration of space.
+                    Among its residents was a group of genetically enhanced gorillas that were intended to test the
+                    effects
+                    of prolonged habitation in space.</p>
+
+                <p>One gorilla displayed such rapid brain development from the gene therapy that he was taken under the
+                    wing
+                    of Dr. Harold Winston, who taught him science and inspired him with tales of human ingenuity. The
+                    young
+                    gorilla passed his days assisting with the scientists' experiments, watching the distant blue world
+                    outside his habitat window, dreaming of the endless possibilities that awaited him there.</p>
+
+                <p>But his life was thrown into chaos when the other gorillas led an uprising, killed the mission
+                    scientists, and claimed the colony for their own. Taking on the name of his beloved human caretaker,
+                    Winston built a makeshift rocket and escaped to Earth. There he found a new home with Overwatch, an
+                    organization that represented everything he had come to admire about humanity. Winston was finally
+                    able
+                    to live up to the heroic ideal that had been instilled in him.</p>
+
+                <p>Now with the fall of Overwatch, Winston has gone into seclusion, once again cut off from the world he
+                    believes in, but longing for the days of heroism to return.</p>
+            </div>
+            <div class="second-char">
+                <h1>Reinhardt</h1>
+                <img id="reinhardt" src="/week05/images/reinhardt.png" alt="reinhardt">
+                <p>Reinhardt Wilhelm styles himself as a champion of a bygone age, who lives by the knightly codes of
+                    valor, justice, and courage.</p>
+
+                <p>Over thirty years ago, Overwatch was founded to counter the threat of the robot uprisings around the
+                    world. Reinhardt, a highly decorated German soldier, was inducted as part of the original Overwatch
+                    strike team that put an end to the Omnic Crisis. After the conflict's resolution, Overwatch grew
+                    into a global institution, keeping the peace in a war-torn world. Reinhardt proved himself to be one
+                    of its most stalwart champions.</p>
+
+                <p> Reinhardt's unique ethics and larger-than-life persona earned the admiration of his peers and
+                    superiors alike. Never afraid to speak his mind, he was Overwatch's most vocal supporter and, when
+                    necessary, its harshest critic, providing a constant reminder that Overwatch was meant to be a force
+                    for good.</p>
+
+                <p>Having served into his late fifties, Reinhardt was faced with mandatory retirement from combat
+                    operations. Despondent about being removed from active duty, Reinhardt feared that his days of
+                    purpose and glory had ended. As times grew darker and Overwatch came under suspicion of corruption
+                    and sedition, Reinhardt could only watch as the cause he had dedicated his life to defending
+                    surrendered in disgrace.</p>
+            </div>
+            <div class="trird-char">
+                <h1>Mercy</h1>
+                <img id="mercy" src="/week05/images/mercy.png" alt="mercy">
+                <p>A guardian angel to those who come under her care, Dr. Angela Ziegler is a peerless healer, a
+                    brilliant
+                    scientist, and a staunch advocate for peace.</p>
+                <p>Ziegler rose to become the head of surgery at a prominent Swiss hospital before pioneering a
+                    breakthrough
+                    in the field of applied nanobiology that radically improved the treatment of life-threatening
+                    illnesses
+                    and injuries. It was this expertise that attracted the attention of Overwatch.</p>
+
+                <p>Because her parents had been taken by war, Ziegler was opposed to the organization's militaristic
+                    approach to keeping global peace. Ultimately, she recognized that Overwatch offered her the
+                    opportunity
+                    to save lives on a much larger scale. As Overwatch's head of medical research, Angela sought to
+                    leverage
+                    her work for healing in frontline crises. The result was the Valkyrie swift-response suit, which
+                    Ziegler
+                    herself piloted on many Overwatch missions.</p>
+
+                <p>Despite her contributions to Overwatch, she was often at odds with her superiors and the
+                    organization's
+                    overarching aims. When Overwatch dissolved, Ziegler dedicated herself to helping those affected by
+                    war.
+                </p>
+
+                <p>Though she spends most of her time caring for the broken and dispossessed in crisis areas around the
+                    world, Dr. Ziegler can be counted on to don her Valkyrie suit whenever innocents are imperiled.</p>
+            </div>
+            <div class="forth-char">
+                <h1>Mei</h1>
+                <img id="mei" src="/week05/images/mei.png" alt="mei">
+                <p>Mei is a scientist who has taken the fight to preserve the environment into her own hands.</p>
+
+                <p>Though many blamed the planet's escalating, unexplained climate phenomena on the advent of new
+                    technologies, the rapidly growing omnic population, and drastically increased consumption of
+                    resources, the true cause remained unknown. To find a solution, Overwatch established a series of
+                    eco-Watchpoints at remote, critical locations worldwide.</p>
+
+                <p>Mei-Ling Zhou was a member of this multiyear initiative. A peerless climatologist, she had introduced
+                    cutting-edge innovations in the field of climate manipulation that protected at-risk areas in Asia
+                    and beyond. She was assigned to the program's monitoring station at Watchpoint: Antarctica when
+                    disaster struck: a sudden, catastrophic polar storm battered the installation and cut it off from
+                    the outside world, leaving the facility damaged and the scientists stranded. As their supplies
+                    dwindled, they entered cryostasis in a last-ditch effort to survive until a rescue attempt could be
+                    made.</p>
+
+                <p>But that rescue never came. It was years later when the team's cryogenics chamber was finally
+                    discovered. Mei, still in hibernation, was the only survivor. The world Mei awoke to had gone
+                    through considerable changes: Overwatch was no more, the serious climate issues had worsened, and
+                    none of the eco-Watchpoints were in operation. Any clues that they had uncovered were lost.</p>
+            </div>
+        </div>
+
+        <footer>
+            &copy; 2020 BLIZZARD ENTERTAINMENT, INC. ALL RIGHTS RESERVED.
+        </footer>
+    </div>
+
 </body>
+
 </html>
