--- a/week06/assign06.html
+++ b/week06/assign06.html
@@ -1,11 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Creative University - The best way to learn">
+    <meta name="keywords" content="Creative, University, News">
+    <meta name="author" content="Jales Nunes">
+    <title>Creative University</title>
+    <link rel="shortcut icon" href="/week06/images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="/week06/styles/main.css">
 </head>
+
 <body>
-    <h1>This will be assignment #6</h1>
+    <div class="container">
+        <header>
+            <div class="logo">
+                <a href="/week06/assign06.html"><img src="/week06/images/logo.png" alt="logo"></a>
+            </div>
+            <div class="slogan">
+                <h1>The best way to learn</h1>
+            </div>
+        </header>
+        <nav>
+            <nav id="nav-menu-container">
+                <ul class="nav-menu">
+                    <li> <a href="/week06/assign06.html">University</a> </li>
+                    <li> <a href="/week06/assign06_2.html">Academics</a> </li>
+                    <li> <a href="/week06/assign06_3.html">Athletics</a> </li>
+                    <li> <a href="/week06/assign06_4.html">Arts</a> </li>
+                </ul>
+            </nav>
+        </nav>
+
+        <main>
+            <div class="content-home">
+                <h1>The Latest News from Creative University</h1><br /><br />
+                <div class="flex-container-1">
+                    <div>
+                        <a href="#">
+                            <img style="max-width: 100% " src="images/University/Corona_Virus.jpg" alt="Corona Virus">
+                            Creative scholars and researchers lend
+                            their expertise to tackling the COVID-19 crisis
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img style="max-width: 100% " src="images/University/Course_Dispatch.jpg"
+                                alt="Course Dispatch">
+                            Creative scholars and researchers lend
+                            their expertise to tackling the COVID-19 crisis
+                        </a>
+
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img style="max-width: 100% " src="images/University/Data_Workflows.jpg"
+                                alt="Data Workflows">
+                            Complex data workflows contribute to reproducibility crisis
+                        </a>
+
+                    </div>
+                </div>
+                <div class="flex-container-2">
+                    <div>
+                        <a href="#">
+                            <img style="max-width: 100% " src="images/University/Artwork.jpg" alt=" Artwork">
+                            The artwork of 72 Lion students, staff, faculty, and friends
+                            is on display in the windows of campus buildings
+                        </a>
+
+                    </div>
+                    <div>
+                        <a href="#">
+                            <img style="max-width: 100% " src="images/University/Black_Holes.jpg" alt="Black Holes">
+                            Under pressure, black holes feast
+                        </a>
+
+                    </div>
+                </div>
+            </div>
+        </main>
+        <aside class="aside-container">
+            <h3>Follow us</h3>
+            <ul>
+                <li>
+                    <a href="https://www.instagram.com/">
+                        <img src="/week06/images/inta.PNG" alt="instagram">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://youtube.com">
+                        <img src="/week06/images/youtube.PNG" alt="youtube">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com">
+                        <img src="/week06/images/twitter.png" alt="Twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://wwww.facebook.com">
+                        <img src="/week06/images/face.PNG" alt="Facebook">
+                    </a>
+                </li>
+            </ul>
+        </aside>
+        <footer>&copy; 2020 Creative University, INC. ALL RIGHTS RESERVED.</footer>
+
+    </div>
 </body>
+
 </html>
